--- a/src/main/webapp/css/post.css
+++ b/src/main/webapp/css/post.css
@@ -1,1 +1,1 @@
-input[type="file"]{display:none}.file-controls>label{display:block}div.form-container{margin-top:1em}div.progress{display:none;margin-top:1em}
+input[type="file"]{display:none}.file-controls>label{display:block}div.form-container{margin-top:1em}div.progress{display:none;margin-top:1em}.selected-files{display:none;margin-top:1em}.error-message-container{display:none}.uploader-container{display:none}span.strong{color:red;font-size:150%}
