--- a/src/main/webapp/css/post.less
+++ b/src/main/webapp/css/post.less
@@ -1,7 +1,6 @@
 input[type="file"] {
   display: none;
 }
-
 .file-controls {
   > label {
     display: block;
@@ -13,4 +12,18 @@ div.form-container {
 div.progress {
   display: none;
   margin-top: 1em;
+}
+.selected-files {
+  display: none;
+  margin-top: 1em;
+}
+.error-message-container {
+  display: none;
+}
+.uploader-container {
+  display: none;
+}
+span.strong {
+  color: red;
+  font-size: 150%;
 }
