--- a/src/main/webapp/css/post.less
+++ b/src/main/webapp/css/post.less
@@ -1,3 +1,6 @@
+body {
+  padding-bottom: 2em;
+}
 input[type="file"] {
   display: none;
 }
@@ -26,4 +29,16 @@ div.progress {
 span.strong {
   color: red;
   font-size: 150%;
+}
+div.screen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-top: 30%;
+  color: rgba(255,255,255,1);
+  font-size: 300%;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,.5);
 }
